# server/api/handler.go
@@ -26,30 +26,18 @@ func NewHandler(
 }
 
 func (h *Handler) Logout(ctx *gin.Context) {
-	if !h.authenticate(ctx) {
-		return
-	}
 	h.authHandler.Logout(ctx)
 }
 
 func (h *Handler) Me(ctx *gin.Context) {
-	if !h.authenticate(ctx) {
-		return
-	}
 	h.authHandler.Me(ctx)
 }
 
 func (h *Handler) AddRestaurant(ctx *gin.Context) {
-	if !h.authenticate(ctx) {
-		return
-	}
 	h.restaurantHandler.AddRestaurant(ctx)
 }
 
 func (h *Handler) UpdateRestaurant(ctx *gin.Context, _ Uuid) {
-	if !h.authenticate(ctx) {
-		return
-	}
 	h.restaurantHandler.UpdateRestaurant(ctx)
 }
 
@@ -57,19 +45,10 @@ func (h *Handler) ListCategories(ctx *gin.Context) {
 	h.categoryHandler.GetCategories(ctx)
 }
 
-func (h *Handler) Login(ctx *gin.Context) {
-	h.authHandler.Login(ctx)
-}
-
-func (h *Handler) Register(ctx *gin.Context) {
-	h.authHandler.Register(ctx)
+func (h *Handler) GoogleAuth(ctx *gin.Context) {
+	h.authHandler.GoogleAuth(ctx)
 }
 
 func (h *Handler) ListRestaurants(ctx *gin.Context) {
 	h.restaurantHandler.GetRestaurants(ctx)
-}
-
-func (h *Handler) authenticate(ctx *gin.Context) bool {
-	h.authHandler.Authenticate(ctx)
-	return !ctx.IsAborted()
 }
