# server/infra/db/restaurants.sql.go
@@ -1,7 +1,7 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
 //   sqlc v1.27.0
-// source: query.sql
+// source: restaurants.sql
 
 package db
 
@@ -10,17 +10,6 @@ import (
 
 	"github.com/google/uuid"
 )
-
-const deleteTokenByUserId = `-- name: DeleteTokenByUserId :exec
-delete
-from user_tokens
-where user_id = ?
-`
-
-func (q *Queries) DeleteTokenByUserId(ctx context.Context, userID uuid.UUID) error {
-	_, err := q.db.ExecContext(ctx, deleteTokenByUserId, userID)
-	return err
-}
 
 const deleteVisitedRestaurantByRestaurantId = `-- name: DeleteVisitedRestaurantByRestaurantId :exec
 delete
@@ -31,40 +20,6 @@ where restaurant_id = ?
 func (q *Queries) DeleteVisitedRestaurantByRestaurantId(ctx context.Context, restaurantID uuid.UUID) error {
 	_, err := q.db.ExecContext(ctx, deleteVisitedRestaurantByRestaurantId, restaurantID)
 	return err
-}
-
-const findAllCategories = `-- name: FindAllCategories :many
-select c.id, c.label, c.icon
-from categories c
-`
-
-type FindAllCategoriesRow struct {
-	ID    uuid.UUID `json:"id"`
-	Label string    `json:"label"`
-	Icon  string    `json:"icon"`
-}
-
-func (q *Queries) FindAllCategories(ctx context.Context) ([]FindAllCategoriesRow, error) {
-	rows, err := q.db.QueryContext(ctx, findAllCategories)
-	if err != nil {
-		return nil, err
-	}
-	defer rows.Close()
-	items := []FindAllCategoriesRow{}
-	for rows.Next() {
-		var i FindAllCategoriesRow
-		if err := rows.Scan(&i.ID, &i.Label, &i.Icon); err != nil {
-			return nil, err
-		}
-		items = append(items, i)
-	}
-	if err := rows.Close(); err != nil {
-		return nil, err
-	}
-	if err := rows.Err(); err != nil {
-		return nil, err
-	}
-	return items, nil
 }
 
 const findAllRestaurantCategories = `-- name: FindAllRestaurantCategories :many
@@ -166,98 +121,6 @@ func (q *Queries) FindAllRestaurants(ctx context.Context) ([]FindAllRestaurantsR
 	return items, nil
 }
 
-const findAllTemporaryUsers = `-- name: FindAllTemporaryUsers :many
-select id, email, token, created_at
-from temporary_users
-`
-
-func (q *Queries) FindAllTemporaryUsers(ctx context.Context) ([]TemporaryUser, error) {
-	rows, err := q.db.QueryContext(ctx, findAllTemporaryUsers)
-	if err != nil {
-		return nil, err
-	}
-	defer rows.Close()
-	items := []TemporaryUser{}
-	for rows.Next() {
-		var i TemporaryUser
-		if err := rows.Scan(
-			&i.ID,
-			&i.Email,
-			&i.Token,
-			&i.CreatedAt,
-		); err != nil {
-			return nil, err
-		}
-		items = append(items, i)
-	}
-	if err := rows.Close(); err != nil {
-		return nil, err
-	}
-	if err := rows.Err(); err != nil {
-		return nil, err
-	}
-	return items, nil
-}
-
-const findTokenByUserId = `-- name: FindTokenByUserId :one
-select token
-from user_tokens
-where user_id = ?
-`
-
-func (q *Queries) FindTokenByUserId(ctx context.Context, userID uuid.UUID) (string, error) {
-	row := q.db.QueryRowContext(ctx, findTokenByUserId, userID)
-	var token string
-	err := row.Scan(&token)
-	return token, err
-}
-
-const findUserByEmail = `-- name: FindUserByEmail :one
-select id, email, password, salt, is_admin
-from users
-where email = ?
-`
-
-type FindUserByEmailRow struct {
-	ID       uuid.UUID `json:"id"`
-	Email    string    `json:"email"`
-	Password string    `json:"password"`
-	Salt     string    `json:"salt"`
-	IsAdmin  bool      `json:"isAdmin"`
-}
-
-func (q *Queries) FindUserByEmail(ctx context.Context, email string) (FindUserByEmailRow, error) {
-	row := q.db.QueryRowContext(ctx, findUserByEmail, email)
-	var i FindUserByEmailRow
-	err := row.Scan(
-		&i.ID,
-		&i.Email,
-		&i.Password,
-		&i.Salt,
-		&i.IsAdmin,
-	)
-	return i, err
-}
-
-const findUserById = `-- name: FindUserById :one
-select id, email, is_admin
-from users
-where id = ?
-`
-
-type FindUserByIdRow struct {
-	ID      uuid.UUID `json:"id"`
-	Email   string    `json:"email"`
-	IsAdmin bool      `json:"isAdmin"`
-}
-
-func (q *Queries) FindUserById(ctx context.Context, id uuid.UUID) (FindUserByIdRow, error) {
-	row := q.db.QueryRowContext(ctx, findUserById, id)
-	var i FindUserByIdRow
-	err := row.Scan(&i.ID, &i.Email, &i.IsAdmin)
-	return i, err
-}
-
 const insertRestaurant = `-- name: InsertRestaurant :exec
 insert into restaurants (id, name, lat, lng, postal_code, address, closed, google_place_id)
 values (?, ?, ?, ?, ?, ?, ?, ?)
@@ -289,8 +152,7 @@ func (q *Queries) InsertRestaurant(ctx context.Context, arg InsertRestaurantPara
 }
 
 const insertRestaurantCategory = `-- name: InsertRestaurantCategory :exec
-insert
-into restaurants_categories(id, restaurant_id, category_id)
+insert into restaurants_categories(id, restaurant_id, category_id)
 values (?, ?, ?)
 `
 
@@ -302,46 +164,6 @@ type InsertRestaurantCategoryParams struct {
 
 func (q *Queries) InsertRestaurantCategory(ctx context.Context, arg InsertRestaurantCategoryParams) error {
 	_, err := q.db.ExecContext(ctx, insertRestaurantCategory, arg.ID, arg.RestaurantID, arg.CategoryID)
-	return err
-}
-
-const insertToken = `-- name: InsertToken :exec
-insert into user_tokens(id, user_id, token)
-values (?, ?, ?)
-`
-
-type InsertTokenParams struct {
-	ID     uuid.UUID `json:"id"`
-	UserID uuid.UUID `json:"userId"`
-	Token  string    `json:"token"`
-}
-
-func (q *Queries) InsertToken(ctx context.Context, arg InsertTokenParams) error {
-	_, err := q.db.ExecContext(ctx, insertToken, arg.ID, arg.UserID, arg.Token)
-	return err
-}
-
-const insertUser = `-- name: InsertUser :exec
-insert into users(id, email, password, salt, is_admin)
-values (?, ?, ?, ?, ?)
-`
-
-type InsertUserParams struct {
-	ID       uuid.UUID `json:"id"`
-	Email    string    `json:"email"`
-	Password string    `json:"password"`
-	Salt     string    `json:"salt"`
-	IsAdmin  bool      `json:"isAdmin"`
-}
-
-func (q *Queries) InsertUser(ctx context.Context, arg InsertUserParams) error {
-	_, err := q.db.ExecContext(ctx, insertUser,
-		arg.ID,
-		arg.Email,
-		arg.Password,
-		arg.Salt,
-		arg.IsAdmin,
-	)
 	return err
 }
 
@@ -358,7 +180,6 @@ where id = ?
 `
 
 type UpdateRestaurantParams struct {
-	ID            uuid.UUID `json:"id"`
 	Name          string    `json:"name"`
 	Lat           float64   `json:"lat"`
 	Lng           float64   `json:"lng"`
@@ -366,6 +187,7 @@ type UpdateRestaurantParams struct {
 	Address       string    `json:"address"`
 	Closed        bool      `json:"closed"`
 	GooglePlaceID string    `json:"googlePlaceId"`
+	ID            uuid.UUID `json:"id"`
 }
 
 func (q *Queries) UpdateRestaurant(ctx context.Context, arg UpdateRestaurantParams) error {
